--- a/website/public/index.html
+++ b/website/public/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>website</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <!--[if lt IE 10]>
+      <p class="browsehappy">You are using <strong>the old browser</strong> . For a better experience, please <a href="http://browsehappy.com/">update</a> for your browser.</p>
+    <![endif]-->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
